# ros2-indoor-amr

./: README.md
beagle_bringup/: CMakeLists.txt  package.xml
beagle_bringup/config/: simple_offline_bringup.rviz
beagle_bringup/launch/: beagle_offline.launch.py  beagle_state_publisher.launch.py  beagle_state_publisher_real.launch.py
beagle_bringup/scripts/: beagle_core.py
beagle_description/: CMakeLists.txt  package.xml
beagle_description/description/: gazebo_control.xacro  lidar.xacro  lidar_real.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_real.xacro  robot_real.urdf.xacro
beagle_description/meshes/: beagle_tire_L.stl  beagle_tire_R.stl  beagle_wheel_L.stl  beagle_wheel_R.stl
beagle_gazebo/: CMakeLists.txt  package.xml
beagle_gazebo/config/: just_for_gazebo.rviz
beagle_gazebo/launch/: launch_beagle_sim.launch.py
beagle_gazebo/worlds/: empty.world  large_maze.world  thin_maze.world
beagle_navigation/: package.xml  setup.cfg  setup.py
beagle_navigation/beagle_navigation/: global_path_planning_astar.py  global_path_planning_astar_narrow.py  path_tracker_pure_pursuit.py
beagle_navigation/launch/: navigation_launch.py  navigation_launch_sim.py  (+2 more)
beagle_slam_toolbox/: CMakeLists.txt  package.xml
beagle_slam_toolbox/config/: large_maze_localization.yaml  large_maze_mapping.yaml  real_slam.yaml  real_slam_mapping.yaml  slam.rviz  thin_maze_localization.yaml  thin_maze_mapping.yaml
beagle_slam_toolbox/launch/: beagle_real_slam.launch.py  beagle_simulation_slam.launch.py
beagle_slam_toolbox/map/robomation/: robomation.pgm  robomation.yaml  robomation_serial.data
beagle_slam_toolbox/map/thin_maze/: thin_maze.pgm  thin_maze.yaml
beagle_something_else/: package.xml  setup.cfg  setup.py
beagle_teleop/: package.xml  setup.cfg  setup.py
(+5 files in other folders)
