<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beagle_bringup</name>
  <version>0.0.0</version>
  <description>Beagle ROS 2 launch script for bringup beagle</description>
  <maintainer email="whddn915@gmail.com">leejongwoo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
