<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beagle_gazebo</name>
  <version>0.0.0</version>
  <description>Beagle ROS2 gazebo launch script</description>
  <maintainer email="whddn915@gmail.com">leejongwoo</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path = "${prefix}/.."/> -->
  </export>
</package>
